[package]
name = "enum_pack"
version = "0.1.0"
edition = "2021"

#[allow(dead_code)]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro-error = "1.0.4"
